[package]
name = "cuda-navigation"
version = "0.1.0"
edition = "2021"
description = "A* pathfinding with obstacle avoidance"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-navigation"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

